// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details Details.ExpanderGroup matches snapshot: Details.ExpanderGroup 1`] = `
<div
  className="govuk-expander-group"
/>
`;

exports[`Details Details.Summary matches snapshot: Details.Summary 1`] = `
<summary
  className="govuk-details__summary"
>
  <span
    className="govuk-details__summary-text"
  >
    Content
  </span>
</summary>
`;

exports[`Details Details.Text matches snapshot: Details.Text 1`] = `
<div
  className="govuk-details__text"
>
  Text
</div>
`;

exports[`Details matches snapshot: ExpanderDetails 1`] = `
<details
  className="govuk-details govuk-expander"
/>
`;

exports[`Details matches snapshot: StandardDetails 1`] = `
<details
  className="govuk-details"
/>
`;
